feat: add tag controller and swagger
