# config/routes.rb
@@ -21,4 +21,11 @@ Rails.application.routes.draw do
       resources :members, only: %i[create destroy]
     end
   end
+
+  namespace :api do
+    namespace :v1 do
+      resources :tags, only: %i[ create destroy index ]
+    end
+  end
+
 end
